Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ img:nth-child( 2 ) {
 @media only screen and ( max-width : 760px ) {
 
   .container-layout {
-    background-color: red;
+    background-color: yellow;
   }
 }
 
